--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <release>15</release>
         </configuration>
       </plugin>
     </plugins>
